    sources can be e.g. solution and/or time-dependent. See tests
    (1p/implicit/pointsources, 2p/implicit/pointsources) for examples.

  - You can now configure YaspGrid tensor grids via the input file.

* IMMEDIATE INTERFACE CHANGES not allowing/requiring a deprecation period:
  - For the multidomain models, the notation of the boundary condition types
    has changed. This is especially important for all momentum boundary conditions.
    In general:
      couplingInflow  -> couplingNeumann
      couplingOutflow -> couplingDirichlet
    But for the momentum balances:
      couplingInflow  -> couplingDirichlet
      couplingOutflow -> couplingNeumann

* Deprecated PROPERTY and PARAMETER NAMES, to be removed after 2.9: BEWARE: The
  compiler will not print any warning if a deprecated property or parameter name
  is used. However, a run-time warning should appear in the summary lines after
  the corresponding run.

* Deprecated CLASSES/FILES, to be removed after 2.9:
  - CubeGridCreator, functionality available in default GridCreator (since 2.8)
  - SimplexGridCreator, functionality available in default GridCreator (since 2.8)
  - DgfGridCreator, functionality available in default GridCreator (since 2.8)

* Deprecated MEMBER FUNCTIONS, to be removed after 2.9:
  -

* Deprecated protected MEMBER VARIABLES, to be removed after 2.9: BEWARE: Older
  compilers will not print any warning if a deprecated protected member variable
  is used.

* DELETED classes/files, property names, constants/enums,
  member functions, which have been deprecated in DuMuX 2.8:
  Everything listed as deprecated below has been removed.

Differences Between DuMuX 2.7 and DuMuX 2.8
===================================================

* IMPORTANT NOTES:
  - DuMuX 2.8 is expected to run based on either Dune 2.3 or Dune 2.4. However,
    no attempt has been made to fix the warnings arising from the deprecation of
    EntityPointer in Dune 2.4. This will be made during the next release cycle.